# RobotCode2025

./: .gitignore  Cargo.toml  Makefile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
auto/: Blue180.traj  Blue2.traj  BlueLong.traj  BlueTriangle.traj  Right2.traj  RotationTest.traj  TushPush1.traj  paths.chor
src/: constants.rs  container.rs  lib.rs  main.rs
src/auto/: mod.rs  path.rs
src/input/: drivetrain.rs  elevator.rs  indexer.rs  mod.rs
src/subsystems/: climber.rs  drivetrain.rs  elevator.rs  indexer.rs  led.rs  mod.rs  vision.rs
src/swerve/: kinematics.rs  odometry.rs
